# MIA_Proyecto1_201901758_2022

./: CMakeLists.txt  README.md  main.cpp
Analyzer/: compile.sh  lexico.l  parser.tab.cc  parser.tab.hh  parser.yy  scanner.cpp
Disks/: DiskFunctions.cpp  DiskFunctions.h  FDisk.cpp  FDisk.h  MkDisk.cpp  MkDisk.h  RmDisk.cpp  RmDisk.h
FileSystem/: Login.cpp  Login.h  Logout.cpp  Logout.h  Loss.cpp  Loss.h  MkGrp.cpp  MkGrp.h  MkUsr.cpp  MkUsr.h  Mkfs.cpp  Mkfs.h  Recovery.cpp  Recovery.h  RmGrp.cpp  RmGrp.h  RmUsr.cpp  RmUsr.h
FileSystemAdmin/: Cat.cpp  Cat.h  Chgrp.cpp  Chgrp.h  Chmod.cpp  Chmod.h  Chown.cpp  Chown.h  Copy.cpp  Copy.h  Edit.cpp  Edit.h  Find.cpp  Find.h  MkDir.cpp  MkDir.h  MkFile.cpp  MkFile.h  Move.cpp  Move.h  Remove.cpp  Remove.h  Rename.cpp  Rename.h
Partitions/: FDisk.cpp  FDisk.h  Mount.cpp  Mount.h  UnMount.cpp  UnMount.h
Reports/: BMBlock.h  BMInode.h  Block.cpp  Block.h  DiskReport.cpp  DiskReport.h  FileReport.cpp  FileReport.h  Inode.cpp  Inode.h  JournalingReport.cpp  JournalingReport.h  LS.cpp  LS.h  MBRReport.cpp  ReportFunctions.cpp  ReportHandler.cpp  SB.cpp  SB.h  Tree.cpp  Tree.h
Results/: report.dot
Utils/: AdminStructure.h  Builder.h  CommandHandler.cpp  Functions.cpp  Functions.h  Structures.h  Variables.cpp  Variables.h
